--- a/apps/apps.json
+++ b/apps/apps.json
@@ -78,5 +78,10 @@
 		"name": "pwa",
 		"url": "./pwa",
 		"description": "Custom  pwa edit"
+	},
+	{
+		"name": "ego-pen",
+		"url": "./ego-pen",
+		"description": "Auto calcuation note"
 	}
 ]
